refactor: change lists to maps (#81)